// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Molecules | Modal Default Story 1`] = `
.c7 {
  margin-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c11 {
  stroke: #6E6E69;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  padding-right: 16px;
}

.c2 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding-bottom: 8px;
  padding-right: 28px;
  min-height: 20px;
}

.c6 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c5 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c2 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (max-width:759px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {
  .c6 {
    max-height: 50vh;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <span
                id="3val-ModalTitle"
              >
                <h2
                  className="c4 c5"
                  type="title2"
                >
                  Dialog information
                </h2>
              </span>
            </div>
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                </p>
              </div>
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                </p>
              </div>
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  Nielsen/Norman has an excellent article about their usage here
                </p>
              </div>
              <p
                className="c8"
                type="primary"
              >
                <a
                  href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                >
                  https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                </a>
              </p>
            </div>
            <button
              className="NormalizedButton__Button-ey7f5x-0 c9"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="c10"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="c11"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Footer Story 1`] = `
.c7 {
  margin-bottom: 8px;
}

.c9 {
  margin: -1px;
  padding: 1px;
  padding-top: 16px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c13 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c14 {
  stroke: #6E6E69;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c11 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: inherit;
  margin: 0;
  font-weight: 700;
  font-size: 14px;
  line-height: 1.4285714285714286;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  position: relative;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding: 4px 12px;
  min-height: 32px;
  background-color: #0046FF;
  color: #FFFFFF;
  border: none;
  border-radius: 0;
  cursor: pointer;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c10::before {
  content: '';
  display: block;
  position: absolute;
  border: 2px solid transparent;
  top: 0;
  left: 0;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
}

.c10:hover {
  background-color: hsl(223.5,100%,45%);
}

.c10:active {
  background-color: hsl(223.5,100%,40%);
}

.c4 {
  padding-right: 16px;
}

.c2 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c12 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
}

.c12,
.c12[type='button'],
.c12[type='reset'],
.c12[type='submit'] {
  -webkit-appearance: button;
}

.c12::-moz-focus-inner,
.c12[type='button']::-moz-focus-inner,
.c12[type='reset']::-moz-focus-inner,
.c12[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c12:-moz-focusring,
.c12[type='button']:-moz-focusring,
.c12[type='reset']:-moz-focusring,
.c12[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding-bottom: 8px;
  padding-right: 28px;
  min-height: 20px;
}

.c6 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c5 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c2 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (max-width:759px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {
  .c6 {
    max-height: 50vh;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <span
                id="5val-ModalTitle"
              >
                <h2
                  className="c4 c5"
                  type="title2"
                >
                  Dialog information
                </h2>
              </span>
            </div>
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                </p>
              </div>
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                </p>
              </div>
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  Nielsen/Norman has an excellent article about their usage here
                </p>
              </div>
              <p
                className="c8"
                type="primary"
              >
                <a
                  href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                >
                  https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                </a>
              </p>
            </div>
            <div
              className="c9"
            >
              <div>
                <p
                  className="c8"
                  type="primary"
                >
                  This is a footer which is a ReactNode, which could e.g. contain a button or only text
                </p>
                <button
                  className="NormalizedButton__Button-ey7f5x-0 c10"
                  onClick={[Function]}
                  type="button"
                >
                  <span>
                    <span
                      className="c11"
                    >
                      Button
                    </span>
                  </span>
                </button>
              </div>
            </div>
            <button
              className="NormalizedButton__Button-ey7f5x-0 c12"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="c13"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="c14"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Hide Close 1`] = `
.c7 {
  margin-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  padding-right: 16px;
}

.c2 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c3 {
  padding-bottom: 8px;
  padding-right: 28px;
  min-height: 20px;
}

.c6 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c5 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c2 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (max-width:759px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {
  .c6 {
    max-height: 50vh;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <span
                id="11val-ModalTitle"
              >
                <h2
                  className="c4 c5"
                  type="title2"
                >
                  Dialog information
                </h2>
              </span>
            </div>
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  The close button in the upper right corner is now hidden because the prop hideClose is true.
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Node As Title 1`] = `
.c8 {
  margin-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: -4px;
  margin-right: -4px;
}

.c4 > * {
  padding-left: 4px;
  padding-right: 4px;
}

.c4 > *:not(:first-child) {
  padding-top: 0;
}

.c5 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c11 {
  stroke: #6E6E69;
}

.c6 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c9 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c2 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c10 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
}

.c10,
.c10[type='button'],
.c10[type='reset'],
.c10[type='submit'] {
  -webkit-appearance: button;
}

.c10::-moz-focus-inner,
.c10[type='button']::-moz-focus-inner,
.c10[type='reset']::-moz-focus-inner,
.c10[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c10:-moz-focusring,
.c10[type='button']:-moz-focusring,
.c10[type='reset']:-moz-focusring,
.c10[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding-bottom: 8px;
  padding-right: 28px;
  min-height: 20px;
}

.c7 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c6 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c2 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (max-width:759px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {
  .c7 {
    max-height: 50vh;
  }
}

<div>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <span
                id="13val-ModalTitle"
              >
                <div
                  className="c4"
                >
                  <svg
                    aria-hidden="true"
                    className="c5"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                      id="a"
                    />
                  </svg>
                  <h2
                    className="c6"
                    type="title2"
                  >
                    React Node Title
                  </h2>
                  <svg
                    aria-hidden="true"
                    className="c5"
                    focusable="false"
                    preserveAspectRatio="xMidYMid meet"
                    role="presentation"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15 0L3 13.5h7.5L9 24l12-13.5h-7.5z"
                      id="a"
                    />
                  </svg>
                </div>
              </span>
            </div>
            <div
              className="c7"
            >
              <div
                className="c8"
              >
                <p
                  className="c9"
                  type="primary"
                >
                  Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                </p>
              </div>
              <div
                className="c8"
              >
                <p
                  className="c9"
                  type="primary"
                >
                  That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                </p>
              </div>
              <div
                className="c8"
              >
                <p
                  className="c9"
                  type="primary"
                >
                  Nielsen/Norman has an excellent article about their usage here
                </p>
              </div>
              <p
                className="c9"
                type="primary"
              >
                <a
                  href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                >
                  https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                </a>
              </p>
            </div>
            <button
              className="NormalizedButton__Button-ey7f5x-0 c10"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="c5"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="c11"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Uncontrolled Behavior 1`] = `
.c7 {
  margin-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c11 {
  stroke: #6E6E69;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 800;
  font-size: 20px;
  line-height: 1.2;
}

.c8 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c4 {
  padding-right: 16px;
}

.c2 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c9 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
}

.c9,
.c9[type='button'],
.c9[type='reset'],
.c9[type='submit'] {
  -webkit-appearance: button;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  padding-bottom: 8px;
  padding-right: 28px;
  min-height: 20px;
}

.c6 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c5 {
    font-size: 24px;
    line-height: 1.1666666666666667;
  }
}

@media (min-width:760px) {
  .c2 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (max-width:759px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {
  .c6 {
    max-height: 50vh;
  }
}

<div>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <span
                id="9val-ModalTitle"
              >
                <h2
                  className="c4 c5"
                  type="title2"
                >
                  Dialog information
                </h2>
              </span>
            </div>
            <div
              className="c6"
            >
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                </p>
              </div>
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                </p>
              </div>
              <div
                className="c7"
              >
                <p
                  className="c8"
                  type="primary"
                >
                  Nielsen/Norman has an excellent article about their usage here
                </p>
              </div>
              <p
                className="c8"
                type="primary"
              >
                <a
                  href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                >
                  https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                </a>
              </p>
            </div>
            <button
              className="NormalizedButton__Button-ey7f5x-0 c9"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="c10"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="c11"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;

exports[`Storyshots Molecules | Modal Without Header 1`] = `
.c4 {
  margin-bottom: 8px;
}

.c1 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c7 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 20px;
  height: 20px;
  fill: #282823;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

.c8 {
  stroke: #6E6E69;
}

.c5 {
  font-family: 'Nordnet Sans Mono',-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,sans-serif;
  color: #282823;
  margin: 0;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.5;
}

.c2 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  z-index: 500;
}

.c6 {
  font-family: inherit;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  display: block;
  background: none;
  padding: 0;
  border: 0;
  cursor: pointer;
  position: absolute;
  top: 20px;
  right: 20px;
}

.c6,
.c6[type='button'],
.c6[type='reset'],
.c6[type='submit'] {
  -webkit-appearance: button;
}

.c6::-moz-focus-inner,
.c6[type='button']::-moz-focus-inner,
.c6[type='reset']::-moz-focus-inner,
.c6[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c6:-moz-focusring,
.c6[type='button']:-moz-focusring,
.c6[type='reset']:-moz-focusring,
.c6[type='submit']:-moz-focusring {
  outline: 1px dotted ButtonText;
}

.c3 {
  overflow-y: auto;
  overflow-x: hidden;
}

.c0 {
  background-image: linear-gradient(#00D200,#FF1900);
  position: absolute;
  right: 0;
  top: 0;
  width: 20px;
  height: 200vh;
}

@media (min-width:760px) {
  .c2 {
    background-color: rgba(110,110,105,0.63);
  }
}

@media (max-width:759px) {

}

@media (min-width:760px) {

}

@media (min-width:760px) {
  .c3 {
    max-height: 50vh;
  }
}

<div>
  <button
    onClick={[Function]}
    type="button"
  >
    Open modal
  </button>
  <div
    className="c0"
  />
  <portal-dummy>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={1}
    />
    <div
      data-focus-lock-disabled={false}
      onBlur={[Function]}
      onFocus={[Function]}
    >
      <div
        onScrollCapture={[Function]}
        onTouchMoveCapture={[Function]}
        onWheelCapture={[Function]}
      >
        <div
          className="c1 c2"
        >
          <div>
            <div
              className="c3"
            >
              <div
                className="c4"
              >
                <p
                  className="c5"
                  type="primary"
                >
                  Modals should be used with care as they are quite intrusive on the user experience and demand immediate attention (while also blocking all other actions on the site). Always consider if you can solve a problem in another way first before you choose to go with the modal.
                </p>
              </div>
              <div
                className="c4"
              >
                <p
                  className="c5"
                  type="primary"
                >
                  That being said they are a good tool if you need to grab the users attention, either to communicate something very important or make them take an action before proceeding.
                </p>
              </div>
              <div
                className="c4"
              >
                <p
                  className="c5"
                  type="primary"
                >
                  Nielsen/Norman has an excellent article about their usage here
                </p>
              </div>
              <p
                className="c5"
                type="primary"
              >
                <a
                  href="https:// www.nngroup.com/articles/modal-nonmodal-dialog/"
                >
                  https:// www.nngroup.com/articles/modal-nonmodal-dialog/
                </a>
              </p>
            </div>
            <button
              className="NormalizedButton__Button-ey7f5x-0 c6"
              onClick={[Function]}
              type="button"
            >
              <svg
                aria-hidden="false"
                className="c7"
                focusable="false"
                preserveAspectRatio="xMidYMid meet"
                role="img"
                viewBox="0 0 24 24"
              >
                <path
                  className="c8"
                  d="m 1 1 l 22 22 m -22 0 l 22 -22"
                  strokeWidth={2}
                />
                <title>
                  Close this dialog
                </title>
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-focus-guard={true}
      style={
        Object {
          "height": "0px",
          "left": "1px",
          "overflow": "hidden",
          "padding": 0,
          "position": "fixed",
          "top": "1px",
          "width": "1px",
        }
      }
      tabIndex={0}
    />
  </portal-dummy>
</div>
`;
